# ProfitPlayground

./: .gitattributes  .gitignore  LICENSE  Makefile  PLAY.md  README.md  RunMe.md  changes.md  explaination.md  matching_engine_test.c  order_main.c  production.md
.github/workflows/: tests.yml
api/: .env.example  README.md  __init__.py  _smoke.py  alembic.ini  auth.py  config.py  db.py  engine_bridge.py  instruments.py  main.py  market_maker.py  models.py  observability.py  persistence.py  pyproject.toml  requirements.txt  rooms.py  routes_market.py  routes_orders.py  routes_portfolio.py  routes_ws.py  run.py  schemas.py  subscriptions.py
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py
bridge/: bridge.c  bridge.h
demo/: pipeline_demo.c
engine/: matching_engine.c  matching_engine.h  orderbook.c  orderbook.h  orders.c  orders.h
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  styles.css  types.ts
frontend/src/components/: Home.tsx  Lobby.tsx  OrderBookLadder.tsx  OrderTicket.tsx  PickScreen.tsx  PositionsPanel.tsx  PriceChart.tsx  Rail.tsx  ResultOverlay.tsx  TopBar.tsx  TradeTape.tsx
frontend/src/hooks/: useEngineSocket.ts
pipeline/: event_bus.c  event_bus.h  gateway.c  gateway.h  pipeline.c  pipeline.h  portfolio.c  portfolio.h  risk.c  risk.h
