[project]
name = "profitplayground-api"
version = "0.1.0"
description = "FastAPI surface over the C trade pipeline"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9,<3",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "SQLAlchemy>=2.0.36,<3",
    "alembic>=1.13",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.4",
    "httpx>=0.28.1",
]

[tool.uv]
package = false
